--- a/force-app/main/default/classes/ParticipantEnrollmentService.cls
+++ b/force-app/main/default/classes/ParticipantEnrollmentService.cls
@@ -304,6 +304,7 @@ public without sharing class ParticipantEnrollmentService {
             'HCP__r.HCP_Contact__r.Account.BillingCountryCode',
             'HCP__r.HCP_Contact__r.Account.BillingStateCode',
             'HCP__r.Orientation_Date__c',
+            'Days_After_Enrolled__c',
             'Informed_Consent__c',
             'Is_Virtual_Study_Site__c',
             'IsSubjectIDverifiedInSDH__c',
