--- a/force-app/main/default/classes/ResourceStudyRelatedService.cls
+++ b/force-app/main/default/classes/ResourceStudyRelatedService.cls
@@ -4,11 +4,13 @@ public virtual inherited sharing class ResourceStudyRelatedService extends Resou
 
         String resStudyQuery =
                 'SELECT Id, ' +
-                        'Active_After_Days__c,' +
                         'Active_On_Status__c,' +
+                        'Expires_On_Status__c, ' +
+                        'Active_After_Days__c,' +
                         'Expires_After_Days__c,' +
                         'Notify_On_Availability__c,' +
                         'Visible_In_Alumni__c,' +
+                        'Visible_To_Delegates__c,' +
                         'Visible_To_Participant__c,' +
                         'Visible_To_PI__c,' +
                         'Visible_To_RP__c,' +
@@ -21,7 +23,7 @@ public virtual inherited sharing class ResourceStudyRelatedService extends Resou
                 'AND Resource__r.Language__c = \'' + rService.getParticipantLanguage() + '\' ';
         List<Res_study__c> resStudies = (List<Res_study__c>) ((DatabaseProxy) ClassFactory.newInstance(DatabaseProxy.class)).query(resStudyQuery, true);
         for (Res_study__c junction : resStudies) {
-            if(StudyResourceVisibilityService.isResourceVisibleForPE(junction, pState.pe)) this.resourcesIds.add(junction.Resource__c);
+            if(StudyResourceVisibilityService.isResourceVisibleForPE(junction, pState.pe, pState.isDelegate)) this.resourcesIds.add(junction.Resource__c);
         }
         return !(this.resourcesIds == null || this.resourcesIds.isEmpty());
     }
