--- a/force-app/main/default/classes/SendEmailToParticipant.cls
+++ b/force-app/main/default/classes/SendEmailToParticipant.cls
@@ -144,28 +144,15 @@ public without sharing class SendEmailToParticipant {
         return emailMessages;
     }
 
-    public static void sendPlainSummaryNotifications(Map<Id, Boolean> partContactIncludeDelegates) {
-        Map<Id, Contact> partContactById = new Map<Id, Contact>([
-                SELECT Id, Participant_Opt_In_Status_Emails__c FROM Contact WHERE Id IN: partContactIncludeDelegates.keySet()
-        ]);
-
+    public static void sendPlainSummaryNotifications(List<Contact> contacts) {
         List<Messaging.SingleEmailMessage> emailMessages = new List<Messaging.SingleEmailMessage>();
-        for(Id partContId : partContactIncludeDelegates.keySet()) {
+        for(Contact con : contacts) {
             addPatientToEmailListIfAvailable(
                     emailMessages,
-                    partContactById.get(partContId),
+                    con,
                     PATIENT_PLAIN_SUMMARY,
                     null
             );
-
-            if(partContactIncludeDelegates.get(partContId)) {
-                addMessagesForDelegates(
-                        emailMessages,
-                        PatientDelegateService.getDelegatedContactIds(partContId),
-                        PATIENT_PLAIN_SUMMARY,
-                        null
-                );
-            }
         }
 
         SendEmailTemplate.sendEmailMessages(emailMessages);
